# idea-recorder

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e3ae1a690c4d_create_messages.py
backend/app/: main.py  models.py  schemas.py
backend/app/api/: endpoints.py
backend/app/core/: config.py
backend/app/services/: transcription.py
backend/tests/: conftest.py  test_health.py  test_messages.py  test_transcription.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: client.ts  messages.ts
frontend/src/components/: Layout.tsx  MessageCard.tsx  MessageList.test.tsx  MessageList.tsx  RecordButton.test.tsx  RecordButton.tsx
frontend/src/hooks/: useAudioRecorder.ts
frontend/src/pages/: Home.test.tsx  Home.tsx
user-stories/: google-speech-to-text-integration.md  index.html  recording-page.md
